# bakugo

./: LICENSE  README.md
.github/: rust.yml
compiler/: .gitignore  Cargo.toml  README.md  justfile
compiler/src/: bakugo.pest  main.rs
compiler/src/ast/: mod.rs
compiler/src/parser/: mod.rs
compiler/tests/: parser.rs
compiler/tests/examples/: 02_comments.bakugo  02_sanity.bakugo  03_statements.bakugo  04_expressions.bakugo  05_return.bakugo  06_var_const_decl.bakugo  06_var_decl.bakugo  07_type_def.bakugo  08_top_level_decl.bakugo  09_floats.bakugo  10_tuple_expr.bakugo  11_return_value.bakugo  12_assignments.bakugo  13_ifstmt.bakugo
compiler/tests/snapshots/: parser__"Hello, world!__n".snap  parser__"__"".snap  parser__"__U000065e5__U0000672c__U00008a9e".snap  parser__"__U00110000".snap  parser__"__n".snap  parser__"__u65e5本__U00008a9e".snap  parser__"__uD800".snap  parser__"__xe6__x97__xa5__xe6__x9c__xac__xe8__xaa__x9e".snap  parser__"__xff__u00FF".snap  parser__"日本語".snap  parser__'__''.snap  parser__'__000'.snap  parser__'__007'.snap  parser__'__377'.snap  parser__'__400'.snap  parser__'__U00101234'.snap  parser__'__U00110000'.snap  parser__'__t'.snap  parser__'__u12e4'.snap  parser__'__uDFFF'.snap  parser__'__x07'.snap  parser__'__xff'.snap  parser__'a'.snap  parser__'ä'.snap  parser__'本'.snap  parser__0.snap  parser__170141183460469231731687303715884105727.snap  parser__170_141183_460469_231731_687303_715884_105727.snap  parser__3_4_3.snap  parser__433.snap  parser__`abc`.snap  parser__`日本語`.snap  parser__ast@error__01_func_parameters.bakugo.snap  (+62 more)
(+12 files in other folders)
