[package]
name = "bakugo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
miette = { version = "5.10.0", features = ["fancy"] }
pest = { version = "2.0", features = ["pretty-print"] }
pest_derive = "2.0"
thiserror = "1.0.48"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "glob"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
